Fix overflow images in carousel

--- a/css/about.css
+++ b/css/about.css
@@ -40,6 +40,9 @@
         width: 30vw;
         height: 30vw;
     }
+    #card_slider img{
+        max-width: 100%;
+    }
     #card_slider {
         --f-carousel-spacing: 40px;
 
